@@ -1,3 +1,9 @@
+2000-02-03  Pete Ratzlaff  <pratzlaff@cfa.harvard.edu>
+
+	* $VERSION = '0.07';
+
+	* Added blade_url_encode(). Minor documentation changes.
+
 2000-01-28  Pete Ratzlaff  <pratzlaff@cfa.harvard.edu>
 
 	* $VERSION = '0.06';
